save (plain!) user in db on request to /signup
