# backend/build/swagger.json
@@ -61,7 +61,7 @@
 						"type": "number",
 						"format": "double"
 					},
-					"timestamp": {
+					"createdAt": {
 						"type": "string"
 					},
 					"subject": {
@@ -89,13 +89,25 @@
 					"userId",
 					"parentId",
 					"parentUserId",
-					"timestamp",
+					"createdAt",
 					"subject",
 					"body",
 					"authorMod",
 					"path",
 					"username",
 					"parentUsername"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"SignUpResponse": {
+				"properties": {
+					"response": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"response"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -113,7 +125,7 @@
 					"username": {
 						"type": "string"
 					},
-					"timestamp": {
+					"createdAt": {
 						"type": "string"
 					},
 					"subject": {
@@ -124,7 +136,7 @@
 					"id",
 					"userId",
 					"username",
-					"timestamp",
+					"createdAt",
 					"subject"
 				],
 				"type": "object",
@@ -228,6 +240,50 @@
 						"schema": {
 							"format": "double",
 							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/signup": {
+			"post": {
+				"operationId": "Signup",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SignUpResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "email",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "username",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "password",
+						"required": true,
+						"schema": {
+							"type": "string"
 						}
 					}
 				]
