# backend/src/models/signup.ts
@@ -1,0 +1,3 @@
+export interface SignUpResponse {
+  response: string;
+}
